<resources>

    <string name="app_name">s205343 Wheel of Fortune</string>

<!--    Startskærm-->
    <string name="start_game">Start Game!</string>
    <string name="Welcome">Welcome to Wheel of Fortune</string>

<!--    Spiltilstande-->
    <string name="Lost_Game">You lost the game</string>
    <string name="Won_game">You won the game</string>
    <string name="You_Lost_Play_Again">You lost! Play again</string>

<!--    Gæt her stings-->
    <string name="Guess">Guess</string>
    <string name="Guess_her">Guess a letter</string>

<!--    Skærme-->
    <string name="Lost_Screem">Lost Screen</string>
    <string name="Win_Screen">Win Screen</string>

    <!--    Bogstaver-->
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="word_that_need_to_be_guessed">Word that need to be guessed</string>
    <string name="spin_wheel">Spin Wheel!!</string>

</resources>