<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.GuessWordFragment">

    <TextView
        android:id="@+id/tvGuessWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="_ _ ABCD" />


    <TextView
        android:id="@+id/tvlettersGuessed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuessWord"
        tools:text="Used Letters: A B C D E F"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/possibleLetters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlettersGuessed"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:constraint_referenced_ids="a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z"
            app:flow_wrapMode="aligned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/a"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/b"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/c"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/d"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/e"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/f"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/g"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/h"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/i"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/j"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/k"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/l"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/m"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/n"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/o"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/p"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/q"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/r"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/s"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/t"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/u"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/v"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/w"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/x"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/y"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/z"
            android:textSize="20sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>